--- a/service/pom.xml
+++ b/service/pom.xml
@@ -45,6 +45,12 @@
 			<artifactId>liquibase-core</artifactId>
 			<version>3.3.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.10</version>
+		</dependency>
+
 
 
 		<dependency>
