--- a/wr/service/pom.xml
+++ b/wr/service/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.d80harri.wr</groupId>
 	<artifactId>service</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 
 	<properties>
 		<aspectj.version>1.7.2</aspectj.version>
