--- a/wr/ui/pom.xml
+++ b/wr/ui/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>net.d80harri</groupId>
     <artifactId>ui</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>ui</name>
@@ -89,7 +89,7 @@
         <dependency>
             <groupId>net.d80harri.wr</groupId>
             <artifactId>service</artifactId>
-            <version>0.0.1</version>
+            <version>0.0.2-SNAPSHOT</version>
         </dependency>
         
         <dependency>
